@@ -8,6 +8,8 @@ New features:
   tuples, e.g results of a (*, *, object) query.
 - Added a printAllRelations method on graphs, to make the difference between
   a print of all relations, and a dump of all relations using listAllRelations.
+- Object serialization: Added possibility to get a graph from an rdf/xml file,
+  not only from a list of triples.
 Bug fixes:
 ~~~~~~~~~~
 -
